--- a/style.css
+++ b/style.css
@@ -672,3 +672,8 @@ z-index: 1;
   opacity: 1;
   transition: opacity 0.6s ease;
 }
+@media only screen and (max-width: 768px) {
+  .project-grid {
+    grid-template-columns: 1fr;
+  }
+}
