--- a/style.css
+++ b/style.css
@@ -674,7 +674,7 @@ z-index: 1;
 }
 @media only screen and (max-width: 768px) {
   .project-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr !important;
   }
   .more-projects-wrapper {
     max-height: none;
