--- a/style.css
+++ b/style.css
@@ -498,23 +498,25 @@ margin: 0 auto;
 }
 
 .education-item {
-background-color: #000; /* Black background */
-padding: 1.5rem;
-border-radius: 8px;
-margin-bottom: 2rem;
-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background-color: #000; /* Black background */
+  padding: 2rem; /* Increased padding */
+  border-radius: 10px;
+  margin-bottom: 2.5rem; /* Slightly more spacing */
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2); /* Slightly more depth */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .education-item:hover {
-transform: translateY(-10px);
-box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+  transform: translateY(-8px);
+  box-shadow: 0 10px 14px rgba(0, 0, 0, 0.3);
 }
+
 
 .education-item h3 {
 margin-bottom: 1rem;
 color: #1db954; /* Spotify green */
 }
+
 
 /* Experience Section */
 .experience-section {
@@ -547,7 +549,7 @@ margin-left: -2px;
 }
 
 .timeline-item {
-padding: 20px 40px;
+padding: 30px 40px;
 position: relative;
 width: 50%;
 animation: fadeIn 1s ease-in-out;
@@ -596,7 +598,7 @@ content: '';
 position: absolute;
 width: 20px;
 height: 20px;
-background-color: #1db954; /* Spotify green */
+background-color: transparent; /* Spotify green */
 border: 4px solid #121212; /* Dark background */
 border-radius: 50%;
 top: 20px;
